# rust-lstm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cursor/rules copy/: code_quality_and_consistency.mdc
.github/workflows/: rust.yml
examples/: README.md  advanced_lr_scheduling.rs  basic_usage.rs  batch_processing_example.rs  bilstm_example.rs  dropout_example.rs  early_stopping_example.rs  gru_example.rs  learning_rate_scheduling.rs  linear_layer_example.rs  model_inspection.rs  multi_layer_lstm.rs  peephole.rs  real_data_example.rs  simple_text_generation.rs  stock_prediction.rs  text_classification_bilstm.rs  text_generation.rs  text_generation_advanced.rs  text_utils_example.rs  time_series_prediction.rs  training_example.rs  weather_prediction.rs
src/: lib.rs  loss.rs  optimizers.rs  persistence.rs  schedulers.rs  text.rs  training.rs  utils.rs
src/layers/: bilstm_network.rs  dropout.rs  gru_cell.rs  linear.rs  lstm_cell.rs  mod.rs  peephole_lstm_cell.rs
src/models/: gru_network.rs  lstm_network.rs  mod.rs
tests/: early_stopping_test.rs  integration_test.rs  persistence_test.rs  readme_examples_test.rs
