[package]
name = "rust-lstm"
version = "0.2.0"
authors = ["Alex Kholodniak <alexandrkholodniak@gmail.com>"]
edition = "2021"
description = "A complete LSTM neural network library with training capabilities, multiple optimizers, and peephole variants."
license = "MIT"
repository = "https://github.com/SyntaxSpirits/rust-lstm"
homepage = "https://github.com/SyntaxSpirits/rust-lstm"
documentation = "https://docs.rs/rust-lstm"
keywords = ["lstm", "neural-network", "machine-learning", "deep-learning", "rnn"]
categories = ["algorithms", "science"]

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"

[[example]]
name = "training_example"
path = "examples/training_example.rs"

[[example]]
name = "stock_prediction"
path = "examples/stock_prediction.rs"

[[example]]
name = "weather_prediction"
path = "examples/weather_prediction.rs"

[[example]]
name = "text_generation_advanced"
path = "examples/text_generation_advanced.rs"

[[example]]
name = "real_data_example"
path = "examples/real_data_example.rs"

[[example]]
name = "simple_text_generation"
path = "examples/simple_text_generation.rs"
