[package]
name = "rust-lstm"
version = "0.5.0"
authors = ["Alex Kholodniak <alexandrkholodniak@gmail.com>"]
edition = "2021"
rust-version = "1.70"
description = "A complete LSTM neural network library with training capabilities, multiple optimizers, and peephole variants."
license = "MIT"
repository = "https://github.com/SyntaxSpirits/rust-lstm"
homepage = "https://github.com/SyntaxSpirits/rust-lstm"
documentation = "https://docs.rs/rust-lstm"
keywords = ["lstm", "neural-network", "machine-learning", "deep-learning", "rnn"]
categories = ["algorithms", "science"]

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "training_example"
path = "examples/training_example.rs"

[[example]]
name = "dropout_example"
path = "examples/dropout_example.rs"

[[example]]
name = "stock_prediction"
path = "examples/stock_prediction.rs"

[[example]]
name = "weather_prediction"
path = "examples/weather_prediction.rs"

[[example]]
name = "text_generation_advanced"
path = "examples/text_generation_advanced.rs"

[[example]]
name = "real_data_example"
path = "examples/real_data_example.rs"

[[example]]
name = "model_inspection"
path = "examples/model_inspection.rs"

[[example]]
name = "bilstm_example"
path = "examples/bilstm_example.rs"

[[example]]
name = "text_classification_bilstm"
path = "examples/text_classification_bilstm.rs"

[[example]]
name = "learning_rate_scheduling"
path = "examples/learning_rate_scheduling.rs"

[[example]]
name = "advanced_lr_scheduling"
path = "examples/advanced_lr_scheduling.rs"

[[example]]
name = "gru_example"
path = "examples/gru_example.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "time_series_prediction"
path = "examples/time_series_prediction.rs"

[[example]]
name = "multi_layer_lstm"
path = "examples/multi_layer_lstm.rs"

[[example]]
name = "batch_processing_example"
path = "examples/batch_processing_example.rs"
